--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PREMIER | Official PREMIER Website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8e/Red-dot.svg/2048px-Red-dot.svg.png"> 
 </head>
@@ -21,7 +21,7 @@
         </div>
         <div id="center">
             <div id="content">
-                <video src="Sample.mp4" autoplay muted loop></video>
+                <video src="./Sample.mp4" autoplay muted loop></video>
                 <div id="overlay">
                     <div id="over1">
                         <h1>Photography <br> and films</h1>
@@ -29,7 +29,7 @@
                     </div>
                     <div id="over2">
                         <h4>Explore</h4>
-                        <img src="arrow.png" alt="">
+                        <img src="./arrow.png" alt="">
                     </div>
                 </div>
             </div>
